--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Proyecto JavaScript </title>
 </head>
 <body>
+    <h1> Concesionaria </h1>
 <script src="main.js"></script>
 </body>
 </html
