--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Proyecto JavaScript </title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1> Concesionaria </h1>
+    <header class="nav-wraper">
+        <nav>
+            <a class="logo" href="">logo</a>
+            <label for="toggle"><i class="material-icons">menu</i></label>
+            <input type="checkbox" id="toggle">
+            <div class="menu">
+                <ul>
+                    <li><a href="">Vehiculos</a></li>
+                    <li><a href="">Usados</a></li>
+                    <li><a href="">Oferta</a></li>
+                    <li><a href="">Contacto</a></li>
+                </ul>
+            </div>
+        </nav>
 <script src="main.js"></script>
 </body>
 </html
